--- a/style.css
+++ b/style.css
@@ -81,6 +81,28 @@ nav {
   display: none;
 }
 
+.sections {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.dynamic-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+  width: 327px;
+  background: #fff;
+  border-radius: 16px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 114px;
+}
+
 header nav .logo {
   font-weight: 700;
   font-size: 18px;
