--- a/style.css
+++ b/style.css
@@ -20,15 +20,15 @@ header {
 }
 
 #pop-up-main {
-  height: 100vh;
-  width: 100vw;
+  height: 600px;
+  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   background: #fff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center space-between;
   align-items: center;
 }
 
@@ -38,12 +38,13 @@ header {
 }
 
 .section-titled {
-  height: auto;
+  height: 20px;
   width: 90%;
   flex: none;
   order: 0;
   flex-grow: 0;
   margin-top: 0;
+  margin-left: 16px;
 }
 
 #btnd {
@@ -61,7 +62,7 @@ header {
 .dynamic-list {
   display: flex;
   align-items: center;
-  height: auto;
+  height: 30px;
   justify-content: space-between;
   width: 65%;
   flex: none;
@@ -98,7 +99,7 @@ header {
 }
 
 .pop-up-image {
-  height: 50vh;
+  height: 100px;
   width: 100%;
   margin-left: 16px;
   margin-right: 16px;
@@ -107,6 +108,15 @@ header {
   display: block;
   flex: none;
   order: 2;
+}
+
+.pop-up-image img {
+  height: 300px;
+  width: 100%;
+  margin-left: 16px;
+  margin-right: 16px;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .pop-up-image-desk {
@@ -118,29 +128,29 @@ header {
   background-size: contain;
   display: none;
   flex: none;
-  order: 2;
 }
 
 .pop-up-content {
   background: white;
-  height: auto;
+  height: 150px;
   width: 100%;
   border-radius: 6px;
   display: flex;
   flex-direction: column;
   order: 3;
-  margin-top: 0;
+  margin-top: 200px;
 }
 
 .pop-up-description {
   width: 100%;
-  height: auto;
+  height: 35px;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
   color: #344563;
   order: 0;
   margin-top: 0;
+  margin-left: 16px;
 }
 
 .category {
@@ -150,11 +160,11 @@ header {
   justify-content: space-evenly;
   padding-left: 2%;
   list-style: none;
-  order: 4;
+  order: 2;
   margin-top: 0;
   padding-top: 0;
   width: 60%;
-  height: auto;
+  height: 50px;
 }
 
 .category li {
@@ -162,7 +172,7 @@ header {
   padding: 10px 12px;
   background: rgba(255, 255, 255, 0.24);
   border-radius: 70px;
-  height: auto;
+  height: 20px;
   width: 20px;
   color: #6070ff;
   font-weight: 500;
@@ -183,7 +193,21 @@ header {
   align-items: center;
 }
 
-#w2button {
+#w2button1 {
+  display: flex;
+  order: 1;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  height: 10vh;
+  padding: 12px 22px;
+  gap: 10px;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  box-sizing: border-box;
+}
+
+#w2button2 {
   display: flex;
   order: 1;
   justify-content: center;
@@ -200,7 +224,7 @@ header {
 .prj2 {
   margin-top: 0;
   height: auto;
-  width: 50%;
+  width: 60%;
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
@@ -210,12 +234,14 @@ header {
   color: #6070ff;
   order: 0;
   flex-grow: 0;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 .prj {
   margin-left: 0;
   height: auto;
-  width: 50%;
+  width: 100%;
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
@@ -225,6 +251,8 @@ header {
   color: #396df2;
   order: 0;
   flex-grow: 0;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 .btn-img {
@@ -258,7 +286,12 @@ header {
   line-height: 16px;
   letter-spacing: 0.03em;
 }
-.popping,
+.popping{
+  height: 0;
+  width: 0;
+  display: none;
+}
+
  .left {
   height: 0;
   display: none;
@@ -323,6 +356,12 @@ header {
 }
 
 .btn-img22 {
+  height: 0;
+  width: 0;
+  display: none;
+}
+
+.btn-img1 {
   height: 0;
   width: 0;
   display: none;
@@ -2033,6 +2072,16 @@ ul.nav-links {
     order: 2;
   }
 
+  .pop-up-image img{
+    height: 100px;
+    width: 100%;
+    margin-left: 16px;
+    margin-right: 16px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: none;
+  }
+
   .pop-up-image-desk {
     height: 400px;
     width: 100%;
@@ -2051,7 +2100,7 @@ ul.nav-links {
   }
 
   .popping {
-    height: 100px;
+    height: 150px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -2118,6 +2167,7 @@ ul.nav-links {
     padding-top: 0;
     width: 60%;
     height: 150px;
+    background-color: red;
   }
   
   .category1 li {
@@ -2154,7 +2204,7 @@ ul.nav-links {
     height: 150px;
     gap: 10px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     order: 1;
     box-sizing: border-box;
@@ -2169,11 +2219,11 @@ ul.nav-links {
   #w2button10 {
     display: flex;
     order: 0;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 40%;
+    width: 100%;
     height: 10vh;
-    padding: 5px 150px;
+    padding: 5px 200px 5px 10px;
     gap: 10px;
     border: 1px solid #6070ff;
     border-radius: 8px;
@@ -2185,10 +2235,9 @@ ul.nav-links {
     order: 1;
     justify-content: center;
     align-items: center;
-    width: 40%;
     height: 10vh;
-    padding: 5px 150px;
-    width: 100px;
+    padding: 5px 200px 5px 10px;
+    width: 100%;
     align-self: center;
     gap: 10px;
     border: 1px solid #6070ff;
@@ -2215,6 +2264,7 @@ ul.nav-links {
     order: 0;
     flex-grow: 0;
     white-space: nowrap;
+    text-decoration: none;
   }
   
   .prj {
@@ -2236,34 +2286,43 @@ ul.nav-links {
     order: 0;
     flex-grow: 0;
     white-space: nowrap;
+    text-decoration: none;
   }
   
-  .btn-img1 {
+  .btn-img {
+    height: 0;
+    width: 0;
+    display: none;
+  }
+
+  .btn-img2 {
+    height: 0;
+    width: 0;
+    display: none;
+  }
+  
+  #w2button10 .btn-img1 {
     height: 5vh;
     width: 20%;
     color: #6070ff;
-    order: 2;
-  }
-
-  .btn-img {
-    height: 0;
-    width: 20%;
-    color: #6070ff;
-    order: 2;
+    order: 1;
+    margin-left: 12px;
   }
   
-  .btn-img2 {
-    height: 0;
+  #w2button11 .btn-img22 {
+    height: 5vh;
     width: 20%;
     color: #6070ff;
-    order: 2;
+    order: 1;
   }
+  
   
   .category li .cat2 {
     display: none;
   }
 
   .category1 li .cat22 {
+    display: block;
     order: 1;
     color: #6070ff;
     font-weight: 500;
@@ -2277,6 +2336,7 @@ ul.nav-links {
   }
   
   .category1 li .cat33 {
+    display:block;
     order: 2;
     color: #6070ff;
     font-weight: 500;
